feat: add message for sorting images in the product image section

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1770,6 +1770,7 @@
     "years": "Anys",
     "yes": "Sí",
     "yesterday": "Ahir",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "No pots eliminar la variant principal del producte",
     "you-sent-a-audio": "Vas enviar un àudio",
     "you-sent-a-document": "Vas enviar un document",
