--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1770,6 +1770,7 @@
     "years": "Años",
     "yes": "Si",
     "yesterday": "Ayer",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Odeslali jste zvuk",
     "you-sent-a-document": "Odeslali jste dokument",
