--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1770,6 +1770,7 @@
     "years": "Jahre",
     "yes": "wenn",
     "yesterday": "Gestern",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "Sie können die Hauptvariante des Produkts nicht löschen",
     "you-sent-a-audio": "D",
     "you-sent-a-document": "Sie haben ein Dokument gesendet",
