--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1770,6 +1770,7 @@
     "years": "Years",
     "yes": "Yes",
     "yesterday": "Yesterday",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "You cannot delete the main variant of the product",
     "you-sent-a-audio": "You sent a sound",
     "you-sent-a-document": "You sent a document",
