--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1770,6 +1770,7 @@
     "years": "Urteak",
     "yes": "Bai",
     "yesterday": "Atzo",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "Ezin duzu produktuaren aldaera nagusia kendu",
     "you-sent-a-audio": "Audio bat bidali duzu",
     "you-sent-a-document": "Dokumentu bat bidali duzu",
