--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1770,6 +1770,7 @@
     "years": "Années",
     "yes": "Si",
     "yesterday": "Hier",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "Vous ne pouvez pas supprimer la variante principale du produit",
     "you-sent-a-audio": "Vous avez envoyé un audio",
     "you-sent-a-document": "Vous avez envoyé un document",
