--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1770,6 +1770,7 @@
     "years": "Lata",
     "yes": "Tak",
     "yesterday": "Wczoraj",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "Nie możesz usunąć głównej warianty produktu",
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
