--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1770,6 +1770,7 @@
     "years": "Anos",
     "yes": "Sim",
     "yesterday": "Ontem",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "Não pode eliminar a variante principal do produto",
     "you-sent-a-audio": "Enviaste um áudio",
     "you-sent-a-document": "Enviaste um documento",
