--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -1770,6 +1770,7 @@
     "years": "años",
     "yes": "Si",
     "yesterday": "Ayer",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
