--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1770,6 +1770,7 @@
     "years": "Anni",
     "yes": "se",
     "yesterday": "Ieri",
+    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
     "you-cant-delete-primary-variant": "Non puoi eliminare la variante principale del prodotto",
     "you-sent-a-audio": "Hai inviato un audio",
     "you-sent-a-document": "Hai inviato un documento",
