Añadido aviso de actualizaciones beta y botón para desactivarlas.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Keine Referenz",
     "no-selected-item": "Keine Elemente ausgewählt",
     "no-stock": "Kein Bestand",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Nicht bearbeitbarer Buchungseintrag",
     "non-editable-columns": "Nicht bearbeitbare Spalten: %columns%",
     "non-editable-document": "Nicht bearbeitbares Dokument",
@@ -1687,6 +1688,8 @@
     "updater": "Updater",
     "updates-available": "Verfügbare Updates",
     "updates-available-p": "Es gibt verfügbare Updates für FacturaScripts. Bitte klicken Sie auf den Aktualisierer und laden Sie die neue Version herunter. Die Updates beheben Fehler und fügen neue Funktionen hinzu.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Aktualisierung der Zähler für angehängte Dateien",
     "upload-file": "Datei hochladen",
     "uploaded-at": "geladen am",
