--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1072,6 +1072,7 @@
     "no-reference": "No reference",
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Non-editable accounting entry",
     "non-editable-columns": "Non editable columns: %columns%",
     "non-editable-document": "Non editable document",
@@ -1687,6 +1688,8 @@
     "updater": "Updater",
     "updates-available": "Updates Available",
     "updates-available-p": "There are updates available for FacturaScripts. Please click on the updater and download the new version. Updates fix bugs and add new features.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Updating attached file counters",
     "upload-file": "Upload file",
     "uploaded-at": "Uploaded at",
