--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Erreferentziarik gabe",
     "no-selected-item": "Ez da elementurik aukeratu",
     "no-stock": "Stocka ez kontrolatu",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Idazpena ezin da editatu",
     "non-editable-columns": "Zutabe ez editagarriak: %columns%",
     "non-editable-document": "Dokumentu ez editagarria",
@@ -1687,6 +1688,8 @@
     "updater": "Eguneratzailea",
     "updates-available": "Eguneratzeak eskuragarri",
     "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzaileetan eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Erantsitako erlazioak eguneratzen",
     "upload-file": "Artxiboa kargatu",
     "uploaded-at": "Hemen kargatua",
