--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Pas de référence",
     "no-selected-item": "Aucun élément sélectionné",
     "no-stock": "Ne pas contrôler le stock",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Entrée comptable non modifiable",
     "non-editable-columns": "Colonnes non modifiables : %columns%",
     "non-editable-document": "Document non éditable",
@@ -1687,6 +1688,8 @@
     "updater": "Processus de mise à jour",
     "updates-available": "Mises à jour disponibles",
     "updates-available-p": "Des mises à jour d'InfacturaScripts sont disponibles. Veuillez cliquer sur le programme de mise à jour et télécharger la nouvelle version. Les mises à jour corrigent les bugs et ajoutent de nouvelles fonctionnalités.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Mise à jour des compteurs de pièces jointes",
     "upload-file": "Subir archivo",
     "uploaded-at": "Téléversé vers",
