--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Sen referencia",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Non controlar stock",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Asento non editable",
     "non-editable-columns": "Non se permite editar as columnas",
     "non-editable-document": "Documento non editable",
@@ -1687,6 +1688,8 @@
     "updater": "Actualizador",
     "updates-available": "Actualizacións dispoñibles",
     "updates-available-p": "Hai actualizacións dispoñibles de FacturaScripts. Por favor, fai clic no actualizador e descarga a nova versión. As actualizacións corrixen fallos e engaden novas funcionalidades.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Actualizando contadores de arquivos adxuntos",
     "upload-file": "Subir ficheiro",
     "uploaded-at": "Cargado en",
