--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Senza riferimento",
     "no-selected-item": "Nessun elemento selezionato",
     "no-stock": "Nessun stock",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Assegnazione non modificabile",
     "non-editable-columns": "Colonna non modificabile: %columns%",
     "non-editable-document": "Documento non modificabile",
@@ -1687,6 +1688,8 @@
     "updater": "Updater",
     "updates-available": "Aggiornamenti disponibili",
     "updates-available-p": "Sono disponibili aggiornamenti per FacturaScripts. Si prega di fare clic sull'aggiornatore e scaricare la nuova versione. Gli aggiornamenti correggono errori e aggiungono nuove funzionalità.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Aggiornamento dei contatori dei file allegati",
     "upload-file": "Carica file",
     "uploaded-at": "Caricato alle",
