--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Bez reference",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Asiento no editable",
     "non-editable-columns": "Columnas no editables: %columns%",
     "non-editable-document": "Documento no editable",
@@ -1687,6 +1688,8 @@
     "updater": "Actualizador",
     "updates-available": "Dostupné aktualizace",
     "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktuátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Aktualizace připojených vazeb",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
