--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Sin referencia",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Asiento no editable",
     "non-editable-columns": "Columnas no editables: %columns%",
     "non-editable-document": "Documento no editable",
@@ -1687,6 +1688,8 @@
     "updater": "Actualizador",
     "updates-available": "Actualizaciones disponibles",
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
