--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Brak odniesienia",
     "no-selected-item": "Nie wybrano żadnego elementu",
     "no-stock": "Brak kontrolowania zapasów",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Nieedytowalny wpis księgowy",
     "non-editable-columns": "Kolumny nieedytowalne: %columns%",
     "non-editable-document": "Dokument nieedytowalny",
@@ -1687,6 +1688,8 @@
     "updater": "Aktualizacja",
     "updates-available": "Dostępne aktualizacje",
     "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć w aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Aktualizowanie powiązań z załączonymi plikami",
     "upload-file": "Prześlij plik",
     "uploaded-at": "Załadowano w",
