--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem stock",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
@@ -1687,6 +1688,8 @@
     "updater": "Atualizador",
     "updates-available": "Atualizações disponíveis",
     "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As actualizações corrigem falhas e adicionam novas funcionalidades.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
