--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1072,6 +1072,7 @@
     "no-reference": "Sense referència",
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
+    "no-updates-now": "No hay actualizaciones en este momento",
     "non-editable-accounting-entry": "Assentament no editable",
     "non-editable-columns": "Columnes no editables: %columns%",
     "non-editable-document": "El document no es pot editar",
@@ -1687,6 +1688,8 @@
     "updater": "Actualitzador",
     "updates-available": "Actualitzacions disponibles",
     "updates-available-p": "Hi ha actualitzacions disponibles de FacturaScripts. Si us plau, feu clic a l'actualitzador i descarregueu la nova versió. Les actualitzacions corregeixen fallades i afegeixen noves funcions.",
+    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Pujar arxiu",
     "uploaded-at": "Pujat el",
