--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -670,6 +670,7 @@
     "fixed-value": "Wartość stała",
     "flag": "Flaga",
     "folder-not-writable": "Nie można zapisać w folderze FacturaScripts.",
+    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
     "font": "Czcionka",
     "font-size": "Rozmiar czcionki",
     "footer": "Stopka",
