--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -670,6 +670,7 @@
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Não é possível escrever na pasta FacturaScripts.",
+    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
     "font": "Fonte",
     "font-size": "Tamanho de fonte",
     "footer": "Rodapé",
