--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -670,6 +670,7 @@
     "fixed-value": "Valor fix",
     "flag": "Bandera",
     "folder-not-writable": "No pots escriure en la carpeta de FacturaScripts.",
+    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
     "font": "Tipo de lletra",
     "font-size": "font-size",
     "footer": "Pié de página",
